Fix sass and style scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -43,3 +43,20 @@ a {
 .MuiTooltip-tooltip {
     font-size: 1em !important;
 }
+
+::-webkit-scrollbar {
+    width: 0.3rem;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: var(--text-primary);
+    border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--text-secondary);
+}
